--- a/index.html
+++ b/index.html
@@ -14,18 +14,22 @@
 
         <div class="wrapper">
             <h2>CONTACT US</h2>
-            <form id="contact-form" action="mail.php" method="POST">
+            <form id="contact-form" action="mail.php" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="name">Full Name</label>
                     <input type="text" name="name" id="name" placeholder="First and Last" required minlength="3" maxlength="25" />
                 </div>
                 <div class="form-group">
-                    <label for="email">Email Address</label>
-                    <input type="email" name="email" id="email" placeholder="email@domain.tld" required />
-                </div>
-                <div class="form-group">
                     <label for="number">phone</label>
                     <input type="number" name="phone" id="number" placeholder="phone" required />
+                </div>
+                <div class="form-group">
+                    <label for="email">Email Address</label>
+                    <input type="email" name="email" id="email" placeholder="your-mail@gmail.com" required />
+                </div>
+                <div class="form-group">
+                    <label for="file">file</label>
+                    <input type="file" name="file" id="file" required/> <br />
                 </div>
                 <div class="form-group">
                     <label for="message">Message</label>
