--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <script src="js/vendor/jquery-1.12.4.min.js"></script>
         <script src="js/vendor/modernizr-3.5.0.min.js"></script>
-        <script src="js/contact-form.js"></script>
+        <script src="js/ajax.js"></script>
         <script src="js/app.js"></script>
     </body>
 </html>
